--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.3",
     "fft.js": "^4.0.3",
     "mic": "^2.1.2",
+    "node-lifx": "^0.8.0",
     "pug": "^2.0.3",
     "socket.io": "^2.1.1"
   },
